install tailwind css and made the home page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,22 @@
+@import "tailwindcss";
+
+@theme {
+  --color-mint: #4ECDC4;
+  --color-darkmint: #1A535C;
+  --color-lightmint: #B9FAED;
+  --color-lemon: #FFE66D;
+
+}
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,6 +24,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* 
 a {
   font-weight: 500;
   color: #646cff;
@@ -28,7 +40,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} 
 
 h1 {
   font-size: 3.2em;
@@ -65,4 +77,5 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} 
+*/
